src/grammar/jsonpath-js.js
// @generated by Peggy 5.0.4.
//
// https://peggyjs.org/

"use strict";


	function buildLogicalExpression(head, tail) {
		return tail.reduce(function(result, element) {
			return {
				type: "LogicalBinary",
				operator: element[1],
				left: result,
				right: element[3]
			};
		}, head);
	}

	function buildUnaryExpression(not, query) {
		if (not) {
			return {
				type: "LogicalUnary",
				operator: "!",
				expr: query
			};
		} else {
			return query;
		}
	}

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    JsonpathQuery: peg$parseJsonpathQuery,
  };
  let peg$startRuleFunction = peg$parseJsonpathQuery;

  const peg$c0 = "$";
  const peg$c1 = "\"";
  const peg$c2 = "'";
  const peg$c3 = "\\";
  const peg$c4 = "b";
  const peg$c5 = "f";
  const peg$c6 = "n";
  const peg$c7 = "r";
  const peg$c8 = "t";
  const peg$c9 = "/";
  const peg$c10 = "u";
  const peg$c11 = "d";
  const peg$c12 = "*";
  const peg$c13 = "0";
  const peg$c14 = "-";
  const peg$c15 = ":";
  const peg$c16 = "?";
  const peg$c17 = "||";
  const peg$c18 = "&&";
  const peg$c19 = "(";
  const peg$c20 = ")";
  const peg$c21 = "!";
  const peg$c22 = "@";
  const peg$c23 = "==";
  const peg$c24 = "!=";
  const peg$c25 = "<=";
  const peg$c26 = ">=";
  const peg$c27 = "[";
  const peg$c28 = "]";
  const peg$c29 = ".";
  const peg$c30 = "-0";
  const peg$c31 = "e";
  const peg$c32 = "true";
  const peg$c33 = "false";
  const peg$c34 = "null";
  const peg$c35 = ",";
  const peg$c36 = "..";

  const peg$r0 = /^[\t-\n\r ]/;
  const peg$r1 = /^[ -!#-&(-[\]-\uD7FF\uE000-\uFFFF]/;
  const peg$r2 = /^[\uD800-\uDBFF]/;
  const peg$r3 = /^[\uDC00-\uDFFF]/;
  const peg$r4 = /^[ABCEF]/i;
  const peg$r5 = /^[0-7]/;
  const peg$r6 = /^[89AB]/i;
  const peg$r7 = /^[CDEF]/i;
  const peg$r8 = /^[ABCDEF]/i;
  const peg$r9 = /^[1-9]/;
  const peg$r10 = /^[<>]/;
  const peg$r11 = /^[\-+]/;
  const peg$r12 = /^[0-9_a-z]/;
  const peg$r13 = /^[a-z]/;
  const peg$r14 = /^[_\x80-\uD7FF\uE000-\uFFFF]/;
  const peg$r15 = /^[0-9]/;
  const peg$r16 = /^[a-z]/i;

  const peg$e0 = peg$classExpectation([["\t", "\n"], "\r", " "], false, false, false);
  const peg$e1 = peg$literalExpectation("$", false);
  const peg$e2 = peg$literalExpectation("\"", false);
  const peg$e3 = peg$literalExpectation("'", false);
  const peg$e4 = peg$literalExpectation("\\", false);
  const peg$e5 = peg$classExpectation([[" ", "!"], ["#", "&"], ["(", "["], ["]", "\uD7FF"], ["\uE000", "\uFFFF"]], false, false, false);
  const peg$e6 = peg$classExpectation([["\uD800", "\uDBFF"]], false, false, false);
  const peg$e7 = peg$classExpectation([["\uDC00", "\uDFFF"]], false, false, false);
  const peg$e8 = peg$literalExpectation("b", false);
  const peg$e9 = peg$literalExpectation("f", false);
  const peg$e10 = peg$literalExpectation("n", false);
  const peg$e11 = peg$literalExpectation("r", false);
  const peg$e12 = peg$literalExpectation("t", false);
  const peg$e13 = peg$literalExpectation("/", false);
  const peg$e14 = peg$literalExpectation("u", false);
  const peg$e15 = peg$classExpectation(["A", "B", "C", "E", "F"], false, true, false);
  const peg$e16 = peg$literalExpectation("D", true);
  const peg$e17 = peg$classExpectation([["0", "7"]], false, false, false);
  const peg$e18 = peg$classExpectation(["8", "9", "A", "B"], false, true, false);
  const peg$e19 = peg$classExpectation(["C", "D", "E", "F"], false, true, false);
  const peg$e20 = peg$classExpectation(["A", "B", "C", "D", "E", "F"], false, true, false);
  const peg$e21 = peg$literalExpectation("*", false);
  const peg$e22 = peg$literalExpectation("0", false);
  const peg$e23 = peg$literalExpectation("-", false);
  const peg$e24 = peg$classExpectation([["1", "9"]], false, false, false);
  const peg$e25 = peg$literalExpectation(":", false);
  const peg$e26 = peg$literalExpectation("?", false);
  const peg$e27 = peg$literalExpectation("||", false);
  const peg$e28 = peg$literalExpectation("&&", false);
  const peg$e29 = peg$literalExpectation("(", false);
  const peg$e30 = peg$literalExpectation(")", false);
  const peg$e31 = peg$literalExpectation("!", false);
  const peg$e32 = peg$literalExpectation("@", false);
  const peg$e33 = peg$literalExpectation("==", false);
  const peg$e34 = peg$literalExpectation("!=", false);
  const peg$e35 = peg$literalExpectation("<=", false);
  const peg$e36 = peg$literalExpectation(">=", false);
  const peg$e37 = peg$classExpectation(["<", ">"], false, false, false);
  const peg$e38 = peg$literalExpectation("[", false);
  const peg$e39 = peg$literalExpectation("]", false);
  const peg$e40 = peg$literalExpectation(".", false);
  const peg$e41 = peg$literalExpectation("-0", false);
  const peg$e42 = peg$literalExpectation("e", true);
  const peg$e43 = peg$classExpectation(["-", "+"], false, false, false);
  const peg$e44 = peg$literalExpectation("true", false);
  const peg$e45 = peg$literalExpectation("false", false);
  const peg$e46 = peg$literalExpectation("null", false);
  const peg$e47 = peg$classExpectation([["0", "9"], "_", ["a", "z"]], false, false, false);
  const peg$e48 = peg$classExpectation([["a", "z"]], false, false, false);
  const peg$e49 = peg$literalExpectation(",", false);
  const peg$e50 = peg$classExpectation(["_", ["\x80", "\uD7FF"], ["\uE000", "\uFFFF"]], false, false, false);
  const peg$e51 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e52 = peg$classExpectation([["a", "z"]], false, true, false);
  const peg$e53 = peg$literalExpectation("..", false);

  function peg$f0(segments) {
    return { 
    	type: "Root", 
    	segments: segments
    };
  }
  function peg$f1(literal) {
    return { 
    	type: "NameSelector",
    	member: literal
    }; 
  }
  function peg$f2(literals) {    return literals.join('');  }
  function peg$f3(literals) {    return literals.join('');  }
  function peg$f4() {    return "\b"  }
  function peg$f5() {    return "\f"  }
  function peg$f6() {    return "\n"  }
  function peg$f7() {    return "\r"  }
  function peg$f8() {    return "\t"  }
  function peg$f9() {    return "/"  }
  function peg$f10() {    return "\\"  }
  function peg$f11(chars) {    return String.fromCharCode(...chars);  }
  function peg$f12(code) {    return [code];  }
  function peg$f13(pair) {    return pair;  }
  function peg$f14() {    return parseInt(text(), 16);  }
  function peg$f15() {    return parseInt(text(), 16);  }
  function peg$f16() {    return parseInt(text(), 16);  }
  function peg$f17() {    return parseInt(text(), 16);  }
  function peg$f18() {    return { type: "WildcardSelector" }  }
  function peg$f19(index) {    return { type: "IndexSelector", index: index }  }
  function peg$f20() {    return 0;  }
  function peg$f21() {
    const number =	parseInt(text());
    if (Number.MIN_SAFE_INTEGER <= number && number <= Number.MAX_SAFE_INTEGER) {
    	return number;
    } else {
    	throw new Error(`Index must be within the range of I-JSON: ${number}`);
    }
  }
  function peg$f22(start, end, step) {
    return {
    	type: "SliceSelector",
    	start: start,
    	end: end,
    	step: step
    }
  }
  function peg$f23(expr) {    return { type: "FilterSelector", expr: expr }  }
  function peg$f24(head, tail) {
    return buildLogicalExpression(head, tail);
  }
  function peg$f25(head, tail) {
    return buildLogicalExpression(head, tail);
  }
  function peg$f26(not, expr) {
    if (not) {
    	return {
    		type: "LogicalUnary",
    		operator: "!",
    		expr: expr
    	};
    }

    return expr;
  }
  function peg$f27(not, query) {
    return buildUnaryExpression(not, {
    	type: "TestExpr",
    	query: query,
    });
  }
  function peg$f28(segments) {
    return {
    	type: 'CurrentNode',
    	segments: segments
    }
  }
  function peg$f29(left, op, right) {
    return {
    	type: "ComparisonExpr",
    	left: left,
    	operator: op,
    	right: right
    }
  }
  function peg$f30(literal) {
    return {
    	type: "Literal",
    	member: literal
    }
  }
  function peg$f31(segments) {
    return {
    	type: 'CurrentNode',
    	segments: segments
    }
  }
  function peg$f32(segments) {
    return { 
    	type: "Root",
    	segments: segments
    }
  }
  function peg$f33(segment) {
    return segment;
  }
  function peg$f34(selector) {    return [selector];  }
  function peg$f35(selector) {    return [selector];  }
  function peg$f36(selector) {    return [selector];  }
  function peg$f37(int, frac, exp) {
    return parseFloat(`${int}${frac ?? ''}${exp ? `e${exp}` : ''}`);
  }
  function peg$f38(sign, digits) {
    return parseInt(`${sign || ''}${digits.join('')}`);
  }
  function peg$f39() {
    return true;
  }
  function peg$f40() {
    return false;
  }
  function peg$f41() {
    return null;
  }
  function peg$f42(name, args) {
    const head = args[0];
    const tail = args[1];
    return {
    	type: "FunctionExpr",
    	name: name,
    	args: [head].concat(tail)
    }
  }
  function peg$f43(selector) {    return [selector];  }
  function peg$f44(head, tail) {
    return [head].concat(tail);
  }
  function peg$f45() {    
	return { 
		type: "MemberNameShorthand",
		member: text()
	};
  }
  function peg$f46(selectors) {
    if (Array.isArray(selectors)) {
    	return {
    		type: "DescendantSegment",
    		selectors: selectors
    	};
    } else {
    	return {
    		type: "DescendantSegment",
    		selectors: [selectors]
    	};
    }
  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseJsonpathQuery() {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseRootIdentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSegments();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSegments() {
    let s0, s1, s2, s3;

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$parseS();
    s3 = peg$parseSegment();
    if (s3 !== peg$FAILED) {
      s1 = s3;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$parseS();
      s3 = peg$parseSegment();
      if (s3 !== peg$FAILED) {
        s1 = s3;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseS() {
    let s0, s1;

    s0 = [];
    s1 = peg$parseB();
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseB();
    }

    return s0;
  }

  function peg$parseB() {
    let s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r0.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseRootIdentifier() {
    let s0;

    if (input.charCodeAt(peg$currPos) === 36) {
      s0 = peg$c0;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parseSelector() {
    let s0;

    s0 = peg$parseNameSelector();
    if (s0 === peg$FAILED) {
      s0 = peg$parseWildcardSelector();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSliceSelector();
        if (s0 === peg$FAILED) {
          s0 = peg$parseIndexSelector();
          if (s0 === peg$FAILED) {
            s0 = peg$parseFilterSelector();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseNameSelector() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseStringLiteral();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseStringLiteral() {
    let s0, s1, s2, s3;
